--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -394,7 +394,7 @@ article img {
     p {
       font-size: 14px;
       margin: 0 0 5px;
-      color: #3c3539;
+      color: #f30c0c;
     }
     a {
       font-weight: normal;
